# glimpse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  justfile  plugin_simulator.py  simulator.py
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
glimpse-gui/: Cargo.toml  README.md  pubspec.yaml
glimpse-gui/lib/: daemon_handler.dart  dbus_service.dart  main.dart
glimpse-gui/lib/protocol/: match.dart  request.dart  response.dart
glimpse-gui/lib/widgets/: tile_icon.dart
glimpse-gui/linux/: CMakeLists.txt
glimpse-gui/linux/runner/: my_application.cc
glimpse-gui/macos/Runner.xcodeproj/: project.pbxproj
glimpse-gui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
glimpse-gui/macos/Runner/Configs/: AppInfo.xcconfig
glimpse-gui/src/: app.rs  components.rs  dbus.rs  gnome.rs  main.rs  messages.rs
glimpse-gui/windows/: CMakeLists.txt
glimpse-gui/windows/runner/: Runner.rc  main.cpp
glimpse-plugins/apps/: Cargo.toml
glimpse-plugins/apps/src/: main.rs
glimpse-plugins/calculator/: Cargo.toml
glimpse-plugins/calculator/src/: main.rs
glimpse-plugins/debug/: Cargo.toml
glimpse-plugins/debug/src/: main.rs
glimpse-plugins/echo/: Cargo.toml
glimpse-plugins/echo/src/: main.rs
glimpse-sdk/: Cargo.toml
glimpse-sdk/src/: errors.rs  jsonrpc.rs  lib.rs  messages.rs  plugin.rs  protocol.rs  search_plugin.rs  socket.rs  traits.rs
glimpse-sdk/tests/: protocol_tests.rs  run_plugin_tests.rs
glimpse-sdk/tests/dummy_plugins/: basic_plugin.rs  configurable_plugin.rs  error_plugin.rs  flaky_plugin.rs  mod.rs  panic_plugin.rs  slow_plugin.rs
glimpsed/: Cargo.toml
glimpsed/src/: daemon.rs  dispatchers.rs  jsonrpc.rs  lib.rs  main.rs  messages.rs  plugin_host.rs  plugins.rs  rpc_host.rs
glimpsed/tests/: daemon_tests.rs  integration_tests.rs  performance_tests.rs  plugin_tests.rs  protocol_tests.rs  security_tests.rs
glimpsed/tests/common/: mod.rs
plugins/: echo  echo.py
resources/: resources.gresource.xml  styles.css
resources/ui/: main_window.blp  main_window.ui  search_row.blp  search_row.ui
src/: app.rs  bridge.rs  commands.rs  executor.rs  extensions.rs  icons.rs  jsonrpc.rs  main.rs  messages.rs  search.rs  worker.rs
src/contrib/: apps.rs  calculator.rs  mod.rs  shell.rs
src/extensions/: mod.rs  process.rs
src/gui/: app.rs  messages.rs  mod.rs  widgets.rs
src/widgets/: mod.rs
src/widgets/search_row/: imp.rs  mod.rs
src/widgets/search_row_object/: imp.rs  mod.rs
src/windows/main/: imp.rs  mod.rs
