[package]
name = "glimpse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
numbat = "1.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
iced = { version = "0.13.1", features = ["tokio", "image", "svg"] }
tokio = { version = "1.46.1", features = [
    "fs",
    "process",
    "sync",
    "io-util",
    "macros",
    "net",
    "time",
    "signal"
] }
dirs = "6.0.0"
serde_json = "1.0.140"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
freedesktop-icons = "0.4.0"
clap = { version = "4.5.42", features = ["derive"] }


[[bin]]
name = "glimpsed"
path = "glimpsed/src/main.rs"

[[bin]]
name = "glimpsed-ui"
path = "glimpsed-gui/src/main.rs"

[workspace]
resolver = "3"
members = [ "glimpse-gui", "glimpse-sdk","glimpsed"]
