[workspace]
resolver = "3"
members = [
    "glimpse-gui",
    "glimpse-plugins/apps",
    "glimpse-plugins/calculator",
    "glimpse-sdk",
    "glimpsed",
]

[workspace.dependencies]
glimpse-sdk = { path = "glimpse-sdk" }
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
gio = { version = "0.21" }
zbus = { version = "5.9.0", features = ["tokio"] }
anyhow = "1.0.98"
dirs = "6.0.0"
