[package]
name = "glimpse-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = [
    "image",
    "markdown",
    "multi-window",
    "qr_code",
    "svg",
    "tokio",
] }
freedesktop-icons = { version = "0.4.0" }
anyhow = { workspace = true }
glimpse-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
