[package]
name = "glimpse-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1.89"
tokio-util = "0.7.16"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
assert_matches = { workspace = true }
serial_test = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tracing-test = { workspace = true }
