[package]
name = "glimpsed"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glimpse-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
