[package]
name = "glimpsed"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
glimpse-sdk = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
serial_test = { workspace = true }
futures = { workspace = true }
assert_matches = { workspace = true }
nix = { workspace = true }
