[package]
name = "glimpse-plugins-debug"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
glimpse-sdk = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1.89"
serde_json = { workspace = true }
freedesktop-icons = "0.4.0"
freedesktop-desktop-entry = "0.7.17"
